[package]
name = "balatro-seed-checker"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
rayon = "1.11.0"
cust = "0.3.2"
common = { path = "../common" }

[build-dependencies]
cuda_builder = { git = "https://github.com/Rust-GPU/rust-cuda" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"

[[bench]]
name = "random_bench"
harness = false